--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       >
         <span class="button__text">
           <svg class="floppy">
-            <use href="./svg/floppy.svg#floppy">
+            <use href="./svg/floppy.svg#floppy"/>
           </svg>
             Сохранить на память
         </span>
@@ -441,7 +441,7 @@
   <dialog class="dialog" id="dialog-id">
     <div class="dialog__svg-container">
       <svg class="dialog__floppy">
-        <use href="./svg/floppy.svg#floppy">
+        <use href="./svg/floppy.svg#floppy"/>
       </svg>
       <span class="button__text-dialog">Вставьте
          дискету, чтобы продолжить</span>
