--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Страница, на которой я коротко описываю свой учебный путь по верстке сайтов" />
-  <meta name="color-scheme" content="dark light" />
+  <meta name="color-scheme" content="light dark" />
   <title>Закрывающий тег</title>
   <link rel="icon" href="./images/favicon.ico" sizes="any" />
   <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
   <link rel="apple-touch-icon" href="./images/favicon.png" />
   <link rel="stylesheet" href="./fonts/fonts.css" />
-  <link rel="stylesheet" href="./styles/variables.css" />
   <link rel="stylesheet" href="./styles/globals.css" />
+  <link rel="stylesheet" href="./styles/variables.css" />
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./styles/animations.css" />
   <link rel="stylesheet" href="./styles/themes.css" />
@@ -21,9 +21,9 @@
 <body class="page">
 
   <header class="header">
-    <p class="header__logo">
+    <a class="header__logo">
       &lt;/html&gt;
-    </p>
+    </a>
     <h1 class="header__title">закрывающий тег</h1>
     <nav class="theme-menu header__theme-menu">
       <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -446,17 +446,16 @@
       <span class="button__text-dialog">Вставьте
          дискету, чтобы продолжить</span>
     </div>
-    <button 
-      class="dialog__button"
-      type="button"
-      onclick="window['dialog-id'].close();"
-    >
+    <form method="dialog">
+      <button 
+        class="dialog__button"
+      >
       <span class="button__text">ок</span>
-    </button>
+      </button>
+    </form>
   </dialog>
 
   <script src="./scripts/like.js"></script>
-  <script src="./scripts/dialog.js"></script>
 
 </body>
 </html>
